Updated CI file

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,4 +24,4 @@ jobs:
         run: npm run format:check
     
       - name: Build, lint, test, and typecheck
-        run: npm run build && npm run lint && npm install --prefix demo && npm run test
+        run: npm run build && npm run lint && npm run test
