--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "test": "vitest",
     "format:check": "prettier --check . ",
     "format": "prettier --write . --list-different",
-    "prepare:pr": "npm run format && npm run lint"
+    "prepare:pr": "npm run format && npm run lint",
+    "db:generate": "npx drizzle-kit generate",
+    "db:drop": "npx drizzle-kit drop",
+    "db:push": "npx drizzle-kit push",
+    "db:migrate": "tsx src/db/migrate.ts"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.5.0",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
     "next": "14.2.4",
     "postgres": "^3.4.4",
@@ -33,6 +39,7 @@
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "tailwindcss": "^3.4.4",
+    "tsx": "^4.16.2",
     "typescript": "^5.5.3",
     "vitest": "^1.6.0"
   }
