--- a/package.json
+++ b/package.json
@@ -10,27 +10,37 @@
     "test": "vitest",
     "format:check": "prettier --check . ",
     "format": "prettier --write . --list-different",
-    "prepare:pr": "npm run format && npm run lint"
+    "prepare:pr": "npm run format && npm run lint",
+    "db:generate": "npx drizzle-kit generate",
+    "db:drop": "npx drizzle-kit drop",
+    "db:push": "npx drizzle-kit push",
+    "db:migrate": "tsx src/db/migrate.ts"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.5.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.31.2",
     "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "postgres": "^3.4.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
     "@testing-library/react": "^16.0.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8",
+    "drizzle-kit": "^0.22.8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.4",
     "jsdom": "^24.1.0",
-    "postcss": "^8",
+    "postcss": "^8.4.39",
     "prettier": "^3.3.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
+    "tailwindcss": "^3.4.4",
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.3",
     "vitest": "^1.6.0"
   }
 }
