--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "db:migrate": "tsx src/db/migrate.ts"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.2",
     "@dotenvx/dotenvx": "^1.5.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
