--- a/package.json
+++ b/package.json
@@ -19,13 +19,21 @@
   "dependencies": {
     "@clerk/nextjs": "^5.2.2",
     "@dotenvx/dotenvx": "^1.5.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
     "drizzle-zod": "^0.5.1",
+    "lucide-react": "^0.407.0",
     "next": "14.2.4",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "vite-tsconfig-paths": "^4.3.2",
     "zod": "^3.23.8"
   },
