--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@clerk/nextjs": "^5.2.2",
     "@dotenvx/dotenvx": "^1.5.0",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
