--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
     "vite-tsconfig-paths": "^4.3.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
