--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "drizzle-zod": "^0.5.1",
     "lucide-react": "^0.407.0",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
