--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "drizzle-orm": "^0.31.2",
     "drizzle-zod": "^0.5.1",
     "lucide-react": "^0.407.0",
-    "next": "14.2.4",
+    "next": "^14.2.16",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
@@ -46,6 +46,7 @@
     "react-hook-form": "^7.52.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "vaul": "^0.9.1",
     "vite-tsconfig-paths": "^4.3.2",
     "zod": "^3.23.8",
@@ -57,6 +58,7 @@
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "drizzle-kit": "^0.22.8",
     "eslint": "^8.57.0",
